# Pathway-Hackathon-2025

./: .env  .gitignore  README.md  arxiv_papers.jsonl  complete_papers_data.json  complete_papers_data.jsonl  config.json  debug_metadata.py  enrich_papers.py  keyword_extractor.py  main.py  parser.py  pyproject.toml  requirements.txt  run.sh  scraper.py  test_dynamic_rag.py  test_improved_keywords.py  test_metadata_extraction.py
backend/: DYNAMIC_RAG_INTEGRATION.md  enrich_papers.py  keyword_extractor.py  main.py  requirements.txt  scraper.py  test_fastapi_query.py
backend/rag/: main.py
frontend/: README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: CollapsiblePaperSidebar.tsx  LoadingAnimation.tsx  PaperSidebar.tsx  PaperViewModal.tsx  ResearchAssistant.tsx  SimpleLoadingAnimation.tsx
frontend/src/pages/: Index.tsx  Results.tsx
parsing/: 2509.15225v1_Text.txt  parser.py
parsing/text_files/: 2509.15226v1_Text.txt
rag/: main.py
scraping/: pathway_scraper.py  python_scraper.py
src/pages/: Results.tsx
text_files/: 2509.15224v1_Text.txt
