[tool.poetry]
name = "pathway-hackathon-2025"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
sentence-transformers = "^5.1.0"
pathway = "^0.26.1"
xmltodict = "^1.0.2"
google-generativeai = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
