[tool.poetry]
name = "pathway-hackathon-2025"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
sentence-transformers = "^5.1.0"
pathway = {extras = ["xpack-llm"], version = "^0.26.1"}
xmltodict = "^1.0.2"
google-generativeai = "^0.8.5"
python-dotenv = "^1.1.1"
pdfminer = "^20191125"
matplotlib = "^3.9.0"
transformers = "^4.45.0"
pdfminer-six = "^20250506"
fastapi = "^0.117.1"
pydantic = "^2.11.9"
uvicorn = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"